src/main/resources/static/asset/css/style.css
/* ... */
.form-group.form-animate-text {
  position: relative;
  margin-bottom: 45px;
}

.form-group.form-animate-text .form-text {
  font-size: 18px;
  padding: 10px 10px 10px 5px;
  display: block;
  width: 100%;
  border: none;
  background:none;
  border-bottom: 1px solid #757575;
}

.form-group.form-animate-text .form-text:focus {
  outline: none;
}

.form-group.form-animate-text label {
  color: #999;
  font-size: 18px;
  font-weight: normal;
  position: absolute;
  pointer-events: none;
  left: 5px;
  top: 10px;
  -webkit-transition: 0.2s ease all;
  -moz-transition: 0.2s ease all;
  -ms-transition: 0.2s ease all;
  -o-transition: 0.2s ease all;
  transition: 0.2s ease all;
  -webkit-transition: 0.2s ease all;
  -moz-transition: 0.2s ease all;
  -ms-transition: 0.2s ease all;
  -o-transition: 0.2s ease all;
  transition: 0.2s ease all;
  -webkit-transition: 0.2s ease all;
  -moz-transition: 0.2s ease all;
  -ms-transition: 0.2s ease all;
  -o-transition: 0.2s ease all;
  transition: 0.2s ease all;
}

.form-group.form-animate-text.form-animate-error label{
  color:#FF968B !important;
}


.form-group.form-animate-text.form-animate-error .bar:before,.form-group.form-animate-text.form-animate-error .bar:after{
  background-color: #FF968B !important;
  width: 50%;
}

.form-group.form-animate-text.form-animate-error .form-animate-error-msg{
  color:#FF968B !important;
  font-size: 16px;
  display: none;
}

.form-group.form-animate-text .form-text:focus ~ label,
.form-text:valid ~ label {
  top: -10px;
  font-size: 14px;
  color: #999C9E;
}

.form-group.form-animate-text .bar {
  position: relative;
  display: block;
  width: 100%;
}

.form-group.form-animate-text .bar:before,
.bar:after {
  content: '';
  height: 2px;
  width: 0;
  bottom: 1px;
  position: absolute;
  background: #5264AE;
  -webkit-transition: 0.2s ease all;
  -moz-transition: 0.2s ease all;
  -ms-transition: 0.2s ease all;
  -o-transition: 0.2s ease all;
  transition: 0.2s ease all;
  -webkit-transition: 0.2s ease all;
  -moz-transition: 0.2s ease all;
  -ms-transition: 0.2s ease all;
  -o-transition: 0.2s ease all;
  transition: 0.2s ease all;
  -webkit-transition: 0.2s ease all;
  -moz-transition: 0.2s ease all;
  -ms-transition: 0.2s ease all;
  -o-transition: 0.2s ease all;
  transition: 0.2s ease all;
}

.form-group.form-animate-text .bar:before {
  left: 50%;
}

.form-group.form-animate-text .bar:after {
  right: 50%;
}

.form-group.form-animate-text .form-text:focus ~ .bar:before,
.form-text:focus ~ .bar:after {
  width: 50%;
}

.form-group.form-animate-text .form-text:focus ~ .highlight {
  -webkit-animation: inputHighlighter 0.3s ease;
  -moz-animation: inputHighlighter 0.3s ease;
  -ms-animation: inputHighlighter 0.3s ease;
  -o-animation: inputHighlighter 0.3s ease;
  animation: inputHighlighter 0.3s ease;
  -webkit-animation: inputHighlighter 0.3s ease;
  -moz-animation: inputHighlighter 0.3s ease;
  -ms-animation: inputHighlighter 0.3s ease;
  -o-animation: inputHighlighter 0.3s ease;
  animation: inputHighlighter 0.3s ease;
  -webkit-animation: inputHighlighter 0.3s ease;
  -moz-animation: inputHighlighter 0.3s ease;
  -ms-animation: inputHighlighter 0.3s ease;
  -o-animation: inputHighlighter 0.3s ease;
  animation: inputHighlighter 0.3s ease;
}

@keyframes rippleForm {
  from {
    -webkit-opacity: 0.8;
    -moz-opacity: 0.8;
    -ms-opacity: 0.8;
    -o-opacity: 0.8;
    opacity: 0.8;
    filter: alpha(opacity=80);
    background-color: #ddd;

  }
  to {
    -webkit-transform: scale(2.5);
    -moz-transform: scale(2.5);
    -ms-transform: scale(2.5);
    -o-transform: scale(2.5);
    transform: scale(2.5);
    -webkit-transform: scale(2.5);
    -moz-transform: scale(2.5);
    -ms-transform: scale(2.5);
    -o-transform: scale(2.5);
    transform: scale(2.5);
    -webkit-opacity: 0;
    -moz-opacity: 0;
    -ms-opacity: 0;
    -o-opacity: 0;
    opacity: 0;
    filter: alpha(opacity=0);
  }
}
@-webkit-keyframes inputHighlighter {
  from {
    background: #5264AE;
  }
  to {
    width: 0;
    background: transparent;
  }
}
@-moz-keyframes inputHighlighter {
  from {
    background: #5264AE;
  }
  to {
    width: 0;
    background: transparent;
  }
}
@keyframes inputHighlighter {
  from {
    background: #5264AE;
  }
  to {
    width: 0;
    background: transparent;
  }
}


/*========Responsive========*/
@media (max-width: 1200px) {
  #content{
    padding-left: 230px;
    padding-right: 0px
  }
  .profile-v1 .profile-v1-cover{margin-bottom: 0px !important;min-height: inherit !important;max-height: inherit !important;}
  .profile-v1 .profile-v1-cover-wrap{padding: 0px !important;}
  .profile-v1 .profile-v1-right-wrap,.profile-v1 .profile-v1-body{padding-left:inherit !important;padding: 0px !important;}
  .sub-left-menu{
    padding-top: 0px !important;
    top: 50px;
  }

  /*profile-v1*/
  .profile-v1 .profile-v1-right  .sub-profile-v1-right3:after{display: none !important;}

  .menu-large .dropdown-menu{
    margin-top: 52px !important;
  }
  .megamenu{
    margin-left: 0 ;
    margin-right: 0 ;
  }
  .megamenu> li {
    margin-bottom: 30px;
  }
  .megamenu> li:last-child {
    margin-bottom: 0;
  }
  .megamenu.dropdown-header {
    padding: 3px 15px !important;

  }
  .navbar-nav .open .dropdown-menu .dropdown-header{
  color:#fff;
  }
}



@media (max-width: 991px) {
  .iconic-timeline .iconic-timeline-detail {
    padding-left: 50px !important;
  }
  .article-v1-body{
    padding: 20px !important;
  }
  .article-v1-footer{
    padding: 0px !important;
  }
}


@media (min-width: 768px) {
  #quote-carousel {
    margin-bottom: 0;
    padding: 0 40px 30px 40px;
  }
}



@media (min-width : 992px) {

}



@media (min-width : 768px) and (max-width: 991px) {


}
/* ... */

